# phala-tee-deploy-rs

./: .env.example  Cargo.toml  MIT-LICENSE  README.md
.github/workflows/: docs.yml
examples/: ELIZA_README.md  basic_deployment.rs  c3po.character.json  c3po_eliza_deployment.rs  dockworker_integration.rs  eliza_agent.rs  eliza_deployment.rs  network_info.rs  operator_user_flow.rs  pubkey_workflow.rs  secure_workflow.rs  system_stats.rs  typescript_equivalent.rs  update_deployment.rs
scripts/: generate_docs.sh
src/: client.rs  config.rs  crypto.rs  deployer.rs  error.rs  lib.rs  tests.rs  types.rs
