[package]
name = "phala-tee-deploy-rs"
version = "0.1.0"
edition = "2021"
description = "A secure TEE deployment library for managing Docker containers in trusted environments"
license = "MIT"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
x25519-dalek = "2.0"
rand = "0.8"
aes-gcm = "0.10"
hex = "0.4.3"
uuid = { version = "1.13.0", features = ["v4"] }
dotenv = "0.15.0"
# Use dockworker for Docker Compose and Dockerfile management
dockworker = { git = "https://github.com/tangle-network/dockworker" }
serde_yaml = "0.9"

[dev-dependencies]
dotenv = "0.15.0"
tokio-test = "0.4"
wiremock = "0.5"

[package.metadata.docs.rs]
# Enable all features when building docs
all-features = true
# Add custom CSS
rustdoc-args = ["--cfg", "docsrs"]
# Specify the default target
default-target = "x86_64-unknown-linux-gnu"
# Configure which platforms are included in the build matrix
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"] 
