[package]
name = "phala-tee-deploy-rs"
version = "0.2.0"
edition = "2021"
description = "Rust client for deploying and managing Docker containers on Phala TEE Cloud (dstack)"
license = "MIT"
repository = "https://github.com/tangle-network/phala-tee-deploy-rs"
documentation = "https://docs.rs/phala-tee-deploy-rs"
keywords = ["tee", "phala", "confidential-computing", "docker", "deployment"]
categories = ["api-bindings", "cryptography"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
x25519-dalek = "2.0"
rand = "0.8"
aes-gcm = "0.10"
hex = "0.4.3"
uuid = { version = "1.13.0", features = ["v4"] }
dotenv = "0.15.0"
serde_yaml = "0.9"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu"]
